# Tagaro-Monorepo

./: .dockerignore  .eslintrc.cjs  .gitignore  .npmrc  Cargo.toml  Dockerfile  README.md  biome.json  find_blackened.py  hide.py  netlify.toml  node_svelte.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  turbo.json
.github/workflows/: static_deployment.yml
apps/cron/: Cargo.toml
apps/cron/src/: main.rs
apps/ebay/: .gitignore  html_inline_external.d.ts  package.json  postbuild.ts  postcss.config.cjs  svelte.config.js  tsconfig.json
apps/ebay/src/: app.html  (+1 more)
apps/email_view/: index.ts  package.json
apps/tpanel/: package.json  postcss.config.cjs  svelte-checkbox.d.ts  svelte.config.js  tailwind.config.cjs  tsconfig.json
apps/web/: .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json
src/: app.css  app.html  global.d.ts  global.scss
src/lib/: Env.ts  info.ts
src/routes/: +layout.svelte  __layout.svelte  admin.svelte  admin_page.svelte  backup __layout.svelte  dev.svelte  index.svelte  shops.svelte  sky_q.svelte  sky_q_internet.svelte  test.svelte
static/ebay_4/: ausfall.html  sky0217_aktion1plus30_angebot.html  sky1115_basicplus40.html  sky1214_xmas24plus30_angebot.html
static/images/: The War Between the Classes - free ebook.html
static/raw_components/: page_plugin.html
static/skydd/: facebook.html  home.html  home_uebersicht_iframe.html  index.html  sky-bestellung-erfolgreich.html
tests/: test.ts
(+387 files in other folders)
