[package]
name = "cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-imap = { version = "0.8.0", features = [
    "runtime-tokio",
], default-features = false }
async-native-tls = { version = "0.5", default-features = false, features = [
    "runtime-tokio",
] }
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"] }
